--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,20 +1,31 @@
 site_name: Kubauth
 
 nav:
-  - Home: index.md
-  - "Installation": installation.md
+  - Home: 10-index.md
+  - "Installation": 20-installation.md
   - "User guide":
-    - "Configuration": user-guide/110-configuration.md
-    - "Tokens and Claims": user-guide/120-tokens-and-claims.md
-    - "Audit": user-guide/130-audit.md
-    - "SSO": user-guide/140-sso.md
-    - "Users Groups": user-guide/150-users-groups.md
-    - "Password Grant": user-guide/160-password-grant.md
-    - "LDAP connector": user-guide/170-ldap-connector.md
-    - "Several ID providers": user-guide/180-several-id-providers.md
-    - "Merge of identity": user-guide/190-merge-of-identity.md
+    - "Configuration": 30-user-guide/110-configuration.md
+    - "Tokens and Claims": 30-user-guide/120-tokens-and-claims.md
+    - "Audit": 30-user-guide/130-audit.md
+    - "SSO": 30-user-guide/140-sso.md
+    - "Users Groups": 30-user-guide/150-users-groups.md
+    - "Password Grant": 30-user-guide/160-password-grant.md
+    - "LDAP connector": 30-user-guide/170-ldap-connector.md
+    - "Several ID providers": 30-user-guide/180-several-id-providers.md
+    - "Merge of identity": 30-user-guide/190-merge-of-identity.md
+  - "Applications integration":
+      - "ArgoCD": 40-applications-integration/110-argocd.md
+      - "Harbor": 40-applications-integration/120-harbor.md
+      - "MinIO": 40-applications-integration/130-minio.md
+  - "Kubernetes integration":
+    - "Introduction": 50-kubernetes-integration/110-introduction.md
+    - "API Server configuration": 50-kubernetes-integration/120-api-server-configuration.md
   - "Appendix":
-    - "OpenLDAP deployment": appendix/100-openldap.md
+    - "OpenLDAP deployment": 70-appendix/100-openldap.md
+
+# Add Reference of API (OidcClient, loginAttempts, groups, users, groupBinding, ssosession, ...)
+# Add application config (Minio, harbor, ArgoCD, zot,....)
+
 
 theme:
   #  name: readthedocs
